--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,13 @@ body{
 h2{
   color:red
 }
+button{
+  color: green;
+  background-color:lawngreen;
+}
+
+input{
+  width: 50%;
+  color: 20px;
+  font-size: medium;
+}
