--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,22 @@ input{
   color: 20px;
   font-size: medium;
 }
+
+.card{
+  align-content: center;
+  border: 1px solid blue;
+  overflow: hidden;
+  margin-bottom: 10px;
+  margin-right: 10px
+}
+
+.card p{
+  text-align: center;
+  padding: 170px;
+}
+
+.card-grid{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
